...
        android:text="当前播放:"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/control_text"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="暂无播放的歌曲:"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@id/text1"
        app:layout_constraintTop_toTopOf="@id/text1"/>
    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>
...

    </LinearLayout>



    <LinearLayout
        android:id="@+id/linelayout1"
        android:layout_width="70dp"
        android:layout_height="240dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/control_huatong_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/huantong_add"
            android:background="@drawable/control_add"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="."
            android:textSize="0sp"
            />
...
            android:layout_marginVertical="25dp"
            android:text="话筒"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/huantong_reduce"
            android:layout_width="70dp"
            android:layout_marginTop="5dp"
            android:layout_height="70dp"
            android:text="."
            android:textSize="0sp"
            android:background="@drawable/control_reduce"
            />

    </LinearLayout>


        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toTopOf="@id/linelayout1"
            app:layout_constraintStart_toEndOf="@id/linelayout1"
            app:layout_constraintEnd_toStartOf="@id/linelayout2">
            <Button
                android:id="@+id/btn1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/control_btn1"/>
            <Button
                android:id="@+id/btn2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="25dp"
                android:background="@drawable/control_btn2"/>
        </LinearLayout>
        <LinearLayout
...
                android:text="切歌"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/ll2"
            app:layout_constraintStart_toEndOf="@id/linelayout1"
            app:layout_constraintEnd_toStartOf="@id/linelayout2">
            <Button
                android:id="@+id/bnt3"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/control_btn3"/>
            <CheckBox
                android:id="@+id/btn4"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:drawableStart="@drawable/play_selector"
                android:button="@null"/>
        </LinearLayout>
...
        android:layout_marginEnd="10dp"
        android:background="@drawable/control_huatong_background"
        app:layout_constraintTop_toTopOf="@id/linelayout1"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/yinxiang_add"
            android:background="@drawable/control_add"
            android:text="."
            android:textSize="0sp"
            android:layout_width="70dp"
            android:layout_height="70dp"/>
        <TextView
...
            android:layout_marginVertical="25dp"
            android:text="音响"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/yinxiang_reduce"
            android:layout_width="70dp"
            android:layout_marginTop="5dp"
            android:text="."
            android:textSize="0sp"
            android:layout_height="70dp"
            android:background="@drawable/control_reduce"
         />
    </LinearLayout>

    <ToggleButton
        android:id="@+id/yingxiaoqiehuan"
        android:layout_width="142dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="172dp"
        android:background="@drawable/control_btn5"
        android:textColor="@color/white"
        android:textOff="音效切换"
        android:textOn="切换成功"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/pingfen"
        android:layout_width="142dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="148dp"
        android:background="@drawable/control_btn5"
        android:checked="false"
        android:textOn="评分（开）"
        android:textOff="评分开关"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/yingxiaoqiehuan"
        app:layout_constraintEnd_toEndOf="parent" />


    <ToggleButton
        android:id="@+id/hujiao"
        android:layout_width="142dp"
        android:layout_height="60dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/control_btn5"
        android:checked="false"
        android:textColor="@color/white"
        android:textOff="呼叫服务"
        android:textOn="呼叫成功"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/yingxiaoqiehuan" />

    <ToggleButton
        android:id="@+id/dengguang"
        android:layout_width="142dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/control_btn5"
        android:checked="false"
        android:textOn="灯光（开）"
        android:textOff="灯光模式"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/hujiao"
        app:layout_constraintStart_toStartOf="@id/pingfen"
        />

...
